--- a/C++/1 course/2 sem/Lab_6/Lab_6/Lab_6.vcxproj
+++ b/C++/1 course/2 sem/Lab_6/Lab_6/Lab_6.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="FileName.cpp" />
     <ClCompile Include="Lab_6.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
