--- a/C++/1 course/2 sem/Lab_6/Lab_6/Lab_6.vcxproj.filters
+++ b/C++/1 course/2 sem/Lab_6/Lab_6/Lab_6.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="Lab_6.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="FileName.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
